app/containers/App.css
.container {
  -webkit-text-rendering: optimizeLegibility;
  -moz-text-rendering: optimizeLegibility;
  -ms-text-rendering: optimizeLegibility;
  text-rendering: optimizeLegibility;
  color: #fff;
  padding: 20px;
  font-family: "Helvetica Neue", Helvetica, "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", メイリオ, Meiryo, "ＭＳ Ｐゴシック", arial, sans-serif;
}

.container input::-webkit-input-placeholder {
  font-style: italic;
  font-weight: 300;
  color: #e6e6e6;
}

.container input::-moz-placeholder {
  font-style: italic;
  font-weight: 300;
  color: #e6e6e6;
}

.container input::input-placeholder {
  font-style: italic;
  font-weight: 300;
  color: #e6e6e6;
}

.container-fluid,
.container {
  margin-right: auto;
  margin-left: auto;
}

.container-fluid {
  padding-right: 2rem;
  padding-left: 2rem;
}

.pinPanel {
  width: 340px;
  background: #d9d9d9;
  position: absolute;
  right: 0;
  top: 0;
  height: 100%;
  bottom: 0;
  padding: 30px 30px 100px 30px;
  overflow: auto;
  z-index: 200;
}

.logoHeader {
  height: 80px;
  text-align: left;
  left: 0;
  top: 0;
  position: absolute;
  width: 100%;
  z-index: 100;
  background: rgba(0, 0, 0, 0.8);
}

.headerImage{
  height: 70px;
  margin-top: 5px;
  margin-left: 5px;
}

.imagesPanel {
  margin-right: 400px;
}

.scrollPanel {
  margin-top: 80px;
}

.pinPanelFooter {
  position: fixed;
  bottom: 0;
  right: 0;
  width: 340px;
  background: #bf081c;
  box-shadow: 0 -10px 20px 0 rgba(0,0,0,0.2);
}
.pinPanelFooterBack {
  position: fixed;
  bottom: 0;
  right: 0;
  width: 170px;
  background: #bf081c;
/*  box-shadow: 0 -10px 20px 0 rgba(0,0,0,0.2);
*/  right: 170px;

}

.btnExit {
  font-size: 20px;
  background-color: transparent;
  border: none;
  color: #FFF;
  padding-left: 900px;
}

.btnNUX {
  font-size: 20px;
  background-color: transparent;
  border: none;
  color: #FFF;
  padding-left: 800px;
}

.btnNext {
  display: block;
  background: #bd081c;
  color: #fff;
  border: 0;
  width: 100%;
  padding: 10px 20px;
  text-align: center;
}

.btnBack {
  display: block;
  background: #bd081c;
  color: #fff;
  border: 0;
  width: 100%;
  padding: 10px 20px;
  text-align: center;
  float: left;


}

.container {
  /* http://meyerweb.com/eric/tools/css/reset/
     v2.0 | 20110126
     License: none (public domain)
  */

  html, body, div, span, applet, object, iframe,
  h1, h2, h3, h4, h5, h6, p, blockquote, pre,
  a, abbr, acronym, address, big, cite, code,
  del, dfn, em, img, ins, kbd, q, s, samp,
  small, strike, strong, sub, sup, tt, var,
  b, u, i, center,
  dl, dt, dd, ol, ul, li,
  fieldset, form, label, legend,
  table, caption, tbody, tfoot, thead, tr, th, td,
  article, aside, canvas, details, embed,
  figure, figcaption, footer, header, hgroup,
  menu, nav, output, ruby, section, summary,
  time, mark, audio, video {
  	margin: 0;
  	padding: 0;
  	border: 0;
  	font-size: 100%;
  	font: inherit;
  	vertical-align: baseline;
  }
  /* HTML5 display-role reset for older browsers */
  article, aside, details, figcaption, figure,
  footer, header, hgroup, menu, nav, section {
  	display: block;
  }
  body {
  	line-height: 1;
  }
  ol, ul {
  	list-style: none;
  }
  blockquote, q {
  	quotes: none;
  }
  blockquote:before, blockquote:after,
  q:before, q:after {
  	content: '';
  	content: none;
  }
  table {
  	border-collapse: collapse;
  	border-spacing: 0;
  }
}

